--- a/config/database.yml
+++ b/config/database.yml
@@ -19,7 +19,10 @@ test:
   timeout: 5000
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
+  adapter: postgresql
+  encoding: utf8
+  database: tategaki
   pool: 5
-  timeout: 5000
+  username: postgres
+  password: bcta-w9
+  host: 127.0.0.1
