--- a/config/database.yml
+++ b/config/database.yml
@@ -19,10 +19,7 @@ test:
   timeout: 5000
 
 production:
-  adapter: postgresql
-  encoding: utf8
-  database: tategaki
+  adapter: sqlite3
+  database: db/production.sqlite3
   pool: 5
-  username: postgres
-  password: bcta-w9
-  host: 127.0.0.1
+  timeout: 5000
